# symbolab_rs

./: Cargo.toml  Dockerfile  benchmark.yml  fly.toml
src/: error.rs  main.rs  symbolab.rs  tex.rs
