[package]
name = "symbolab_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
axum = "0.5.15"
reqwest = { default-features = false, version = "0.11.11", features = [
    "serde_json",
    "json",
    "brotli",
    "gzip",
    "rustls-tls",
] }
resvg = "0.23.0"
rex = { git = "https://github.com/grafeia/ReX" }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full", "tracing"] }
tower-http = { version = "0.3.4", features = [
    "trace",
    "compression-br",
    "cors",
] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }

font = { git = "https://github.com/pdf-rs/font", features = ["woff"] }
pathfinder_geometry = { git = "https://github.com/servo/pathfinder/" }
pathfinder_color = { git = "https://github.com/servo/pathfinder/" }
pathfinder_content = { git = "https://github.com/servo/pathfinder/" }
pathfinder_renderer = { git = "https://github.com/servo/pathfinder/" }
pathfinder_export = { git = "https://github.com/servo/pathfinder/" }
usvg = "0.23.0"
tiny-skia = "0.6.0"
webp = "0.2.2"
base64 = "0.13.0"
console-subscriber = "0.1.7"
